# jackal

./: readme.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/kinova_msgs/: AddPoseToCartesianTrajectoryRequest.h  AddPoseToCartesianTrajectoryResponse.h  ArmJointAnglesAction.h  ArmJointAnglesActionFeedback.h  ArmJointAnglesActionGoal.h  ArmJointAnglesActionResult.h  ArmJointAnglesFeedback.h  ArmJointAnglesGoal.h  ArmJointAnglesResult.h  ArmPoseAction.h  ArmPoseActionFeedback.h  ArmPoseActionGoal.h  ArmPoseActionResult.h  ArmPoseFeedback.h  ArmPoseGoal.h  ArmPoseResult.h  Arm_KinovaPoseAction.h  Arm_KinovaPoseActionFeedback.h  Arm_KinovaPoseActionGoal.h  Arm_KinovaPoseActionResult.h  Arm_KinovaPoseFeedback.h  Arm_KinovaPoseGoal.h  Arm_KinovaPoseResult.h  CartesianForce.h  ClearTrajectoriesRequest.h  ClearTrajectoriesResponse.h  FingerPosition.h  HomeArmRequest.h  HomeArmResponse.h  JointAngles.h  JointTorque.h  JointVelocity.h  KinovaPose.h  PoseVelocity.h  RunCOMParametersEstimationRequest.h  RunCOMParametersEstimationResponse.h  SetEndEffectorOffsetRequest.h  SetEndEffectorOffsetResponse.h  SetFingersPositionAction.h  SetFingersPositionActionFeedback.h  (+19 more)
devel/include/pan_tilt_msg/: PanTiltCmd.h
devel/include/velodyne_msgs/: VelodynePacket.h  VelodyneScan.h
devel/lib/kinect2_bridge/: kinect2_bridge
devel/lib/kinect2_calibration/: kinect2_calibration
devel/lib/kinect2_viewer/: kinect2_viewer
devel/lib/kinova_arm_moveit_demo/: motion_plan  pick_place  test_accuracy  work_scene
devel/lib/kinova_driver/: gripper_command_action_server  kinova_arm_driver  (+3 more)
src/iqr_4b_robot/iqr_4b_bringup/: CMakeLists.txt  package.xml
src/iqr_4b_robot/iqr_4b_bringup/launch/: iqr_bringup.launch
src/iqr_4b_robot/iqr_4b_bringup/launch/include/: jackal.launch.xml  kinova.launch.xml
src/iqr_4b_robot/iqr_4b_description/: CMakeLists.txt  package.xml
src/iqr_4b_robot/iqr_4b_description/launch/: display_robot_model.launch  view_robot.launch
src/iqr_4b_robot/iqr_4b_description/rviz/: view_modle.rviz  view_robot.rviz
src/iqr_4b_robot/iqr_4b_description/urdf/: iqr_4b_robot.urdf.xacro  jackal_support.xacro  kinect_v2.xacro  vlp16.xacro  zed.xacro
src/iqr_4b_robot/iqr_4b_description/urdf/mesh/: VLP16.stl  ZED.stl
src/iqr_4b_robot/iqr_4b_navigation/: CMakeLists.txt  package.xml
src/iqr_4b_robot/iqr_4b_navigation/launch/: amcl_demo.launch  gmapping_demo.launch
src/iqr_4b_robot/iqr_4b_navigation/maps/: map.pgm  map.yaml
(+185 files in other folders)
