<?xml version="1.0"?>
<package format="2">
  <name>iqr_4b_description</name>
  <version>0.3.0</version>
  <description>The iqr_4b_description package</description>

  <author email="yanlei@iquotient-robot.com">QuartzYan</author>
  <maintainer email="yanlei@iquotient-robot.com">QuartzYan</maintainer>

  <!-- LICENSE -->
  <license>MIT</license>

  <!-- DEPEND -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
