<?xml version="1.0"?>
<package format="2">
  <name>iqr_4b_navigation</name>
  <version>0.0.0</version>
  <description>The iqr_4b_navigation package</description>

  <author email="yanlei@iquotient-robot.com">QuartzYan</author>
  <maintainer email="yanlei@iquotient-robot.com">QuartzYan</maintainer>

  <!-- LICENSE -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
